--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Application_Artifact
-        path: /home/runner/work/OrchardModuleWithAzureSignalRServiceSDK/release/
+        path: /home/runner/work/OrchardModuleWithAzureSignalRServiceSDK/OrchardModuleWithAzureSignalRServiceSDK/SimpleMvc.Web/bin/Release
